--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@nuxtjs/axios": "^5.13.6",
     "@stefanobartoletti/nuxt-social-share": "^1.1.1",
+    "@vueuse/head": "^2.0.0",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
     "html2canvas": "^1.4.1",
-    "nuxt": "^3.13.0",
+    "nuxt": "^3.13.2",
     "sharp": "^0.33.5",
     "vue": "latest",
     "vue-router": "latest"
