--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@nuxtjs/axios": "^5.13.6",
     "@stefanobartoletti/nuxt-social-share": "^1.1.1",
     "@vueuse/head": "^2.0.0",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
     "html2canvas": "^1.4.1",
     "nuxt": "^3.13.2",
     "sharp": "^0.33.5",
     "vue": "latest",
+    "vue-loader": "^17.4.2",
     "vue-router": "latest"
   }
 }
